==> Bondzio/dots-on-a-map/sensornode/source/Micrium/Software/uC-Probe/Target/Communication/Generic/RS-232/Ports/NXP/LH7A404/probe_rs232c.c <==
#include  <probe_com.h>
#include  <probe_rs232.h>
#define  LH7A404_REG_CSC_BASE            ((CPU_INT32U)0x80000400)
#define  LH7A404_REG_UART1_BASE          ((CPU_INT32U)0x80000600)
#define  LH7A404_REG_UART2_BASE          ((CPU_INT32U)0x80000700)
#define  LH7A404_REG_UART3_BASE          ((CPU_INT32U)0x80000800)
#define  LH7A404_REG_VIC2_BASE           ((CPU_INT32U)0x8000A000)
#define  LH7A404_VIC2_UART1                                6
#define  LH7A404_VIC2_UART2                                8
#define  LH7A404_VIC2_UART3                               10
#define  LH7A404_REG_UART1_DATA     (*(volatile CPU_INT32U *)(LH7A404_REG_UART1_BASE + 0x0000))
#define  LH7A404_REG_UART1_FCON     (*(volatile CPU_INT32U *)(LH7A404_REG_UART1_BASE + 0x0004))
#define  LH7A404_REG_UART1_BRCON    (*(volatile CPU_INT32U *)(LH7A404_REG_UART1_BASE + 0x0008))
#define  LH7A404_REG_UART1_CON      (*(volatile CPU_INT32U *)(LH7A404_REG_UART1_BASE + 0x000C))
#define  LH7A404_REG_UART1_STATUS   (*(volatile CPU_INT32U *)(LH7A404_REG_UART1_BASE + 0x0010))
#define  LH7A404_REG_UART1_RAWISR   (*(volatile CPU_INT32U *)(LH7A404_REG_UART1_BASE + 0x0014))
#define  LH7A404_REG_UART1_INTEN    (*(volatile CPU_INT32U *)(LH7A404_REG_UART1_BASE + 0x0018))
#define  LH7A404_REG_UART1_ISR      (*(volatile CPU_INT32U *)(LH7A404_REG_UART1_BASE + 0x001C))
#define  LH7A404_REG_UART1_RES      (*(volatile CPU_INT32U *)(LH7A404_REG_UART2_BASE + 0x0020))

void  ProbeRS232_InitTarget (CPU_INT32U baud_rate)
{
    CPU_INT16U  div;
    CPU_INT32U  clk_freq;

                                                                /* ------------- COMPUTE DIVISOR BAUD RATE ------------ */
    LH7A404_REG_CSC_PWRCNT |= DEF_BIT_29;                       /* UART buad clock source = 14.7456.                    */
    clk_freq            = 14756000;                             /* Get the CPU clock frequency.                         */
    div                 = (CPU_INT16U)((clk_freq / (16 * baud_rate)) - 1);

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
                                                                /* --------------- SETUP VIC FOR UART2 ---------------- */
    LH7A404_REG_VIC2_INTSEL    &= ~(1 << LH7A404_VIC2_UART2);   /* Select IRQ.                                          */
                                                                /* Set the vector address.                              */
    LH7A404_REG_VIC2_VAD6       = (CPU_INT32U)ProbeRS232_RxTxISRHandler;
    LH7A404_REG_VIC2_VECTCNTL6  = 0x20 | LH7A404_VIC2_UART2;    /* Enable vectored interrupts.                          */

                                                                /* ------------------- SETUP UART2 -------------------- */
    LH7A404_REG_UART2_CON       = DEF_BIT_00;                   /* Enable UART.                                         */
    LH7A404_REG_UART2_BRCON     = div;                          /* Init baud rate.                                      */
    LH7A404_REG_UART2_FCON      = DEF_BIT_04                    /* Enable FIFO.                                         */
                                | DEF_BIT_05 | DEF_BIT_06;      /* 8 data bits, 1 stop bit, no parity.                  */
    LH7A404_REG_UART2_DMACR     = 0;                            /* Disable DMA.                                         */
    LH7A404_REG_UART2_EIC       = 0x0F;
    LH7A404_REG_UART2_INTEN     = 0;                            /* Disable all interrupts.                              */

                                                                /* -------------------- ENABLE INT -------------------- */
    LH7A404_REG_VIC2_INTEN      =  (1 << LH7A404_VIC2_UART2);   /* Enable interrupt.                                    */
#endif
}

void  ProbeRS232_Tx1 (CPU_INT08U tx_data)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    LH7A404_REG_UART2_DATA = tx_data;
#endif
}

void  ProbeRS232_TxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    LH7A404_REG_UART2_INTEN &= ~DEF_BIT_01;
#endif
}

void  ProbeRS232_TxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    LH7A404_REG_UART2_INTEN |= DEF_BIT_01;
#endif
}
